# whatsapp-smart-agent

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  example.env.py  langgraph.json  package.json  pyproject.toml  pytest.ini  run.py
.github/workflows/: ci.yml  main_pdf-assistant.yml
app/: __init__.py  main.py  models.py
app/core/: config.py  database.py  pdf_processor.py  twilio_whatsapp_client.py  whatsapp_client.py
app/data_schemas/: __init__.py  pdf_document.py  processed_message.py
app/routes/: admin.py  monitoring.py  webhook.py
app/services/: langchain_service.py  prompts.py  state.py  webhook_service.py
tests/: conftest.py  create_test_pdf.py  test_admin.py  test_api.py  test_config.py  test_data_schemas.py  test_database.py  test_integration.py  test_langchain.py  test_langchain_service.py  test_models.py  test_pdf.py  test_prompts.py  test_structure.py  test_twilio.py  test_webhook_service.py  test_whatsapp.py
