[tool.poetry]
name = "whatsapp-pdf-assistant"
version = "0.1.0"
description = "WhatsApp PDF Assistant"
authors = ["Yarin Twito <yarin.twito@runi.ac.il>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
fastapi = ">=0.109.0"
uvicorn = ">=0.23.0,<=0.27.0"
httpx = "^0.27.0"
python-multipart = "^0.0.6"
pypdf = "^3.17.1"
langchain = "^0.2.0"
langchain-openai = "^0.1.0"
langchain-community = "^0.2.0"
langchain-core = "^0.2.38"
pydantic = "^2.10.6"
pydantic-settings = "^2.0.1"
openai = "^1.3.0"
tiktoken = ">=0.5.2, <0.9.0"
annoy = "^1.17.3"
langsmith = "^0.1.112"
graphviz = "^0.20.1"
langgraph = "^0.3.18"
sqlmodel = "^0.0.22"
langgraph-api = "^0.0.33"
PyMuPDF = "^1.23.8"
twilio = "^9.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
mypy = "^1.7.0"
flake8 = "^6.1.0"
black = "^23.11.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.3"
reportlab = "^4.3.1"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"